--- a/assignments/index.html
+++ b/assignments/index.html
@@ -12,7 +12,7 @@
   <script src="function-conversion.js"></script>
 </head>
 
-<body>
+<body style="background:#36393d">
 <h1>Check your work in the console!</h1>
 </body>
 </html>
